--- a/src/index.css
+++ b/src/index.css
@@ -21,5 +21,26 @@ body {
   display: flex;
   flex-direction: column;
   max-width: 20rem;
-  justify-content: center;
+}
+
+button {
+  margin-top: 1rem;
+  height: 3rem;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.saved-color .swatch {
+  height: 5rem;
+  width: 5rem;
+  margin-right: 1rem;
 }
